[tool.poetry]
name = "websploit"
version = "4.0.4"
description = "Websploit is a high level MITM framework"
authors = ["f4rih <https://github.com/f4rih>"]
readme = "README.md"
packages = [
    { include = "websploit", from = "." }
]

[tool.poetry.scripts]
websploit = "websploit.websploit:start_wsf"

[tool.poetry.dependencies]
python = "^3.9"
scapy = "^2.4.5"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
